# pic-chemistry

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  FORTRAN_STYLE.md  README.md  claude.md  codecov.yml  environment.yml  ford.md  fpm.toml  index.html  mqc_prep.py  run_validation.py  search.html  test.inp  validation_tests.json  w345.xyz  water_monomer.xyz
.github/: check-precommit.yml
app/: basis_reader.f90  gms_basis_app.f90  main.f90  tbmain.f90  test.f90
basis_sets/: 6-31G.txt  6-31Gs.txt
cmake/: CMakeLists.txt
cmake/modules/: Findjsonfortran.cmake  Findpic-blas.cmake  Findpic-mpi.cmake  Findpic.cmake  Findtblite.cmake
interface/: calc_energy_interface.html  calc_gradient_interface.html  calc_hessian_interface.html  distributed_unfragmented_hessian.html  do_fragment_work.html  global_coordinator.html  hessian_coordinator.html  hessian_worker.html  node_coordinator.html  node_worker.html  parse_aimd_section.html  parse_connectivity_generic.html  parse_connectivity_section.html  parse_driver_section.html  parse_fragmentation_section.html  parse_fragments_generic.html  parse_fragments_section.html  parse_geometry_generic.html  parse_geometry_section.html  parse_hessian_section.html  parse_model_section.html  parse_molecules_section.html  parse_scf_section.html  parse_schema_section.html  parse_structure_generic.html  parse_structure_section.html  parse_system_section.html  parse_xtb_section.html  run_distributed_sub.html  run_serial_sub.html  serial_fragment_processor.html  unfragmented_calculation.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: mpi_fragment_work_smod.html  mqc_basis_file_reader.html  mqc_basis_reader.html  mqc_basis_utils.html  mqc_calc_types.html  mqc_calculation_defaults.html  mqc_calculation_interface.html  mqc_calculation_keywords.html  mqc_cgto.html  mqc_cli_parser.html  mqc_combinatorics.html  mqc_config_adapter.html  mqc_config_parser.html  mqc_config_parser_basic_sections.html  mqc_config_parser_calc_settings.html  mqc_config_parser_fragments.html  mqc_config_parser_molecules.html  mqc_config_parser_structure.html  mqc_driver.html  mqc_elements.html  mqc_error.html  mqc_finite_differences.html  mqc_frag_utils.html  mqc_fragment_lookup.html  mqc_geometry.html  mqc_gmbe_utils.html  (+35 more)
src/: CMakeLists.txt  gms_basis_file_reader.f90  gms_basis_reader.f90  gms_cgto.f90  gms_cli_parser.f90  gms_xyz_reader.f90  main.f90  mqc_basis_file_reader.f90  mqc_basis_reader.f90  mqc_basis_utils.f90  mqc_calculation_interface.f90  mqc_calculation_keywords.f90  mqc_cgto.f90  mqc_chemistry_algorithms.f90  mqc_cli_parser.f90  mqc_combinatorics.f90  mqc_config_adapter.f90  mqc_config_parser.F90  mqc_config_parser.f90  mqc_config_parser_basic_sections.f90  mqc_config_parser_molecules.f90  mqc_config_parser_structure.f90  mqc_driver.F90  mqc_driver.f90  mqc_elements.f90  mqc_error.f90  mqc_finite_differences.f90  mqc_frag_utils.f90  mqc_geometry.f90  mqc_gmbe_fragment_distribution_scheme.f90  mqc_gmbe_utils.f90  mqc_input_parser.f90  mqc_libcint_interface.f90  mqc_logo.f90  mqc_mbe.F90  mqc_mbe.f90  mqc_mbe_fragment_distribution_scheme.F90  mqc_mbe_fragment_distribution_scheme_hessian.F90  mqc_mbe_io.f90  mqc_mbe_mpi_fragment_distribution_scheme.F90  (+18 more)
src/basis/: CMakeLists.txt  mqc_basis_reader.f90  mqc_basis_utils.f90  mqc_cgto.f90
src/chemistry/: mqc_chemistry_algorithms.f90  mqc_mbe.f90  mqc_physical_fragment.f90
src/cli/: CMakeLists.txt  mqc_cli_parser.f90  mqc_driver.f90
src/core/: CMakeLists.txt  mqc_calculation_defaults.f90  mqc_calculation_keywords.f90  mqc_elements.f90  mqc_geometry.f90  mqc_json_output_types.f90  mqc_logo.f90  mqc_mpi_context.f90  mqc_physical_constants.f90  mqc_program_limits.f90  mqc_result_types.f90
src/fragmentation/: CMakeLists.txt  mqc_combinatorics.f90  mqc_frag_utils.f90  mqc_fragment_lookup.f90  mqc_gmbe_fragment_distribution_scheme.f90  mqc_gmbe_utils.f90  mqc_mbe.F90  mqc_mbe.f90  mqc_mbe_fragment_distribution_scheme.F90  mqc_mbe_fragment_distribution_scheme_hessian.F90  mqc_mbe_io.f90  mqc_mbe_mpi_fragment_distribution_scheme.F90  mqc_physical_fragment.f90  mqc_serial_fragment_processor.f90  mqc_unfragmented_workflow.f90
src/fragmentation/common/: mqc_fragment_lookup.f90  mqc_many_body_expansion.f90  mqc_physical_fragment.f90
src/fragmentation/gmbe/: mqc_gmbe_fragment_distribution_scheme.f90
src/fragmentation/mbe/: mqc_mbe.f90  mqc_mbe_fragment_distribution_scheme.F90  mqc_mbe_fragment_distribution_scheme_hessian.F90  mqc_mbe_io.f90  mqc_mbe_mpi_fragment_distribution_scheme.F90  mqc_serial_fragment_processor.f90  mqc_unfragmented_workflow.f90
src/interface/: mqc_calculation_interface.f90
src/io/: CMakeLists.txt  mqc_basis_file_reader.f90  mqc_config_adapter.f90  mqc_config_parser.f90  mqc_input_parser.f90  mqc_io_helpers.f90  mqc_json.f90  mqc_json_writer.f90  mqc_output_filename.f90  mqc_xyz_reader.f90
src/io/parsers/: CMakeLists.txt  mqc_config_parser_calc_settings.f90  mqc_config_parser_fragments.f90
src/libcint_interface/: CMakeLists.txt  mqc_libcint_interface.f90
src/methods/: CMakeLists.txt  mqc_method_base.f90  mqc_method_config.f90  mqc_method_dft.f90  mqc_method_hf.f90  mqc_method_xtb.f90
src/parallel/: CMakeLists.txt  mqc_mpi_tags.f90
src/utils/: mqc_error.f90  mqc_finite_differences.f90
src/vibrational/: CMakeLists.txt  mqc_thermochemistry.f90  mqc_vibrational_analysis.f90
test/: CMakeLists.txt  test_mqc_basis_file_reader.f90  test_mqc_basis_utils.f90  test_mqc_cli_parser.f90  test_mqc_config_parser.f90  test_mqc_elements.f90  test_mqc_frag_utils.f90  test_mqc_fragment_from_atoms.f90  test_mqc_geometry.f90  test_mqc_gmbe_energy.f90  test_mqc_gmbe_intersection.f90  test_mqc_hessian_finite_diff.f90  test_mqc_input_parser.f90  test_mqc_mbe.f90  test_mqc_method_api.f90  test_mqc_method_placeholders.f90  test_mqc_method_types.f90  test_mqc_physical_fragment.f90  test_mqc_result_types.f90  test_mqc_split_lines.f90  test_mqc_thermochemistry.f90  test_mqc_vibrational_analysis.f90  test_mqc_xyz_reader_detailed.f90  tester.f90
(+492 files in other folders)
